Working on LyricTemplateEngineer